# OpenGL

./: CMakeLists.txt  GenerateProject.bat
includes/glad/: glad.h
libs/: glfw3.lib
res/shaders/: BaseShader.frag
src/: Application.cpp  ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  glad.c
